# email-ai-assistant

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
config/: accounts.example.yaml
src/email_intel/: __main__.py  accounts.py  app.py  config.py  logging_setup.py  models.py  runtime.py  scheduler.py
src/email_intel/integrations/: google_calendar.py  openrouter.py  telegram.py  telegram_bot.py
src/email_intel/pipeline/: calendar.py  classify.py  fetch.py  notify.py  parse.py  pending.py  summarize.py  worker.py
src/email_intel/prompts/: extraction.py
src/email_intel/providers/: base.py  imap.py
src/email_intel/security/: __init__.py  crypto.py
src/email_intel/storage/: db.py  migrate.py  repo.py  schema.py
tests/: conftest.py  test_account_scoping.py  test_bot_auth.py  test_calendar.py  test_calendar_tz.py  test_classify.py  test_crypto.py  test_migration.py  test_notify_rules.py  test_openrouter.py  test_parse.py  test_pending_dedup.py  test_pipeline_e2e.py  test_queue.py  test_storage.py
